Fix CI tests: add --add-opens for Apache Arrow on Java 17